--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     //compile files('libs/google-gson-1.7.1/gson-1.7.1.jar')
     //  compile 'com.android.support:appcompat-v7:17.0.0'
     compile project(':libraries:tess-two')
+    compile 'com.android.support:support-v4:21.0.3'
 }
