--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
             android:name=".ResultsActivity"
             android:label="@string/title_activity_results" >
         </activity>
+        <activity
+            android:name=".CheckResultsActivity"
+            android:label="@string/title_activity_check_results" >
+        </activity>
     </application>
 
 </manifest>
